[FIX] Spelling error

--- a/Resources/Private/Language/locallang_csh_tx_dashboard_domain_model_dashboardwidgetsettings.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_dashboard_domain_model_dashboardwidgetsettings.xlf
@@ -7,7 +7,7 @@
 				<source>Title</source>
 			</trans-unit>
 			<trans-unit id="widget_identifier.description">
-				<source>Widget Indetifier</source>
+				<source>Widget Identifier</source>
 			</trans-unit>
 			<trans-unit id="state.description">
 				<source>State of widget (collapsed, expanded etc)</source>
