--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -72,6 +72,12 @@
 			<trans-unit id="1439446997.description">
 				<source>List of system news in a dashboard widget</source>
 			</trans-unit>
+			<trans-unit id="dashboardWidget.iframe.name">
+				<source>IFrame</source>
+			</trans-unit>
+			<trans-unit id="dashboardWidget.iframe.description">
+				<source>An iframe module</source>
+			</trans-unit>
 			<trans-unit id="tx_dashboard_domain_model_dashboardsettings">
 				<source>Dashboard Settings</source>
 			</trans-unit>
