--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -9,6 +9,9 @@
 			<trans-unit id="dashboardManager.selectablePrototypesConfiguration.standard.label">
 				<source>Standard dashboard</source>
 			</trans-unit>
+			<trans-unit id="dashboardManager.create_new_dashboard_widget_setting">
+				<source>New widget</source>
+			</trans-unit>
 			
 			<trans-unit id="tx_dashboard_domain_model_dashboard">
 				<source>Dashboard</source>
@@ -61,22 +64,22 @@
 			<trans-unit id="tx_dashboard_domain_model_dashboardwidgetsettings.add">
 				<source>Add new widget</source>
 			</trans-unit>
-			<trans-unit id="41385600.name">
+			<trans-unit id="dashboardWidget.rsswidget.name">
 				<source>RSS2 Feed Widget</source>
 			</trans-unit>
-			<trans-unit id="41385600.description">
+			<trans-unit id="dashboardWidget.rsswidget.description">
 				<source>Fetches a RSS2 feed and displays the feed in a dashboard widget</source>
 			</trans-unit>
-			<trans-unit id="1439441923.name">
+			<trans-unit id="dashboardWidget.actionwidget.name">
 				<source>Action Widget</source>
 			</trans-unit>
-			<trans-unit id="1439441923.description">
+			<trans-unit id="dashboardWidget.actionwidget.description">
 				<source>List of actions in a dashboard widget</source>
 			</trans-unit>
-			<trans-unit id="1439446997.name">
+			<trans-unit id="dashboardWidget.sysnewswidget.name">
 				<source>System News</source>
 			</trans-unit>
-			<trans-unit id="1439446997.description">
+			<trans-unit id="dashboardWidget.sysnewswidget.description">
 				<source>List of system news in a dashboard widget</source>
 			</trans-unit>
 			<trans-unit id="dashboardWidget.iframe.name">
