[!!!] Rename WidgetSettings to Widget
While storing some settings as well, this class represents
a concrete widget being used on a dashboard.

Clarify this by renaming the class and variables

--- a/Resources/Private/Language/locallang_csh_tx_dashboard_domain_model_dashboard.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_dashboard_domain_model_dashboard.xlf
@@ -9,8 +9,8 @@
 			<trans-unit id="description.description">
 				<source>Description</source>
 			</trans-unit>
-			<trans-unit id="dashboard_widget_settings.description">
-				<source>Widgets Settings</source>
+			<trans-unit id="widgets.description">
+				<source>Widgets</source>
 			</trans-unit>
 			<trans-unit id="beuser.description">
 				<source>Widgets</source>
